--- a/CV-Latex/ShuyueJia-CV.tex
+++ b/CV-Latex/ShuyueJia-CV.tex
@@ -13,15 +13,15 @@
 \hspace*{\fill} 
 
 \section{Education}
-\datedsubsection{City University of Hong Kong (CityU), Hong Kong, China}{}{Commence in May 2021}
+\datedsubsection{City University of Hong Kong (CityU), Hong Kong, China}{}{May 2021 - Present}
 \workitemstwo
-{M.Phil. Computer Science}
-{Supervisor: \href{https://www.cs.cityu.edu.hk/~shiqwang/}{Dr. Shiqi Wang}, Research area: TBD}
+{Master of Philosophy Computer Science}
+{Supervisor: \href{https://www.cs.cityu.edu.hk/~shiqwang/}{Dr. Shiqi Wang}, Research area: Image Quality Assessment}
 
 \datedsubsection{Northeast Electric Power University (NEEPU), Jilin, China}{}{Sep 2016 - Jun 2020}
 \workitemsthree
-{B.Eng. in Computer Science / Intelligence Science and Technology Major, GPA - 80.26/100}
-{Supervisor: \href{mailto:ymh7821@163.com}{Prof. Yimin Hou}, Research area: Deep Learning \& Machine Learning}
+{Bachelor of Engineering / Intelligence Science and Technology Major, GPA - 80.26/100}
+{Supervisor: \href{mailto:ymh7821@163.com}{Prof. Yimin Hou}, Research area: Deep Learning}
 {Thesis: Brain-Computer Interface Signals' Classification and Its Applications based on Deep Learning Methods}
 
 \datedsubsection{University of California, Irvine (UC Irvine), CA, United States}{}{Jul - Sep 2017}
@@ -35,7 +35,7 @@
 \datedsubsection{Tencent Technology Inc., Beijing, China}{RS Research Intern}{Oct - Dec 2020}
 \workitemstwo
 {Assist with the unified architecture w.r.t. the \emph{Rerank} Module for Tencent Video Recommendation System (RS).}
-{Conducted research on the Dynamic Graph Convolutional Neural Networks (GCN) \href{https://github.com/SuperBruceJia/paper-reading/raw/master/Graph-Neural-Network/Dynamic-GCN-Survey.pptx}{Survey} and Reinforcement Learning models, and currently applied these approaches to tackle the cold-start problem of RS.}
+{Conducted research on the Dynamic Graph Convolutional Neural Networks (DGCN) \href{https://shuyuej.com/files/Dynamic-GCN-Survey.pdf}{Survey} and learned Reinforcement Learning models.}
 
 \hspace*{\fill} 
 
@@ -78,16 +78,16 @@
 \hspace*{\fill}
 
 \workitemsone
-{GCNs-Net: A Graph Convolutional Neural Network Approach for Decoding Time-resolved EEG Motor Imagery Signals. \href{https://arxiv.org/abs/2006.08924}{[Paper]} \href{https://drive.google.com/file/d/1ecMbtZV2eH14sRAqWIIf1iRvDAC7DMDs/view}{[Spectral-GCN-Presentation]} \href{https://github.com/SuperBruceJia/paper-reading/raw/master/Graph-Neural-Network/Dynamic-GCN-Survey.pptx}{[Dynamic-GCN-Presentation]} \href{https://github.com/SuperBruceJia/EEG-DL}{[Code]}\\
+{GCNs-Net: A Graph Convolutional Neural Network Approach for Decoding Time-resolved EEG Motor Imagery Signals. \href{https://arxiv.org/abs/2006.08924}{[Paper]} \href{https://shuyuej.com/files/GCNs-Net.pdf}{[Spectral-GCN-Presentation]} \href{https://shuyuej.com/files/Dynamic-GCN-Survey.pdf}{[Dynamic-GCN-Presentation]} \href{https://github.com/SuperBruceJia/EEG-DL}{[Code]}\\
 	Xiangmin Lun, \textbf{Shuyue Jia (Corresponding Author)}, Yimin Hou, Yan Shi, and Yang Li.\\
-	\emph{Journal of Neural Engineering}, 2021. (Under Review)}
+	\emph{arXiv preprint arXiv:2006.08924}, 2021. (Under Review)}
 
 \hspace*{\fill} 
 
 \workitemsone
 {Deep Feature Mining via Attention-based BiLSTM-GCN for Human Motor Imagery Recognition. \href{https://arxiv.org/abs/2005.00777}{[Paper]}\href{https://github.com/SuperBruceJia/EEG-DL}{[Code]}\\
 	Yimin Hou, \textbf{Shuyue Jia (Corresponding Author)}, Xiangmin Lun, Yan Shi, and Yang Li.\\
-	\emph{IEEE Access}, 2021. (Under Review)}
+	\emph{arXiv preprint arXiv:2005.00777}, 2021. (Under Review)}
 
 \hspace*{\fill}
 
@@ -138,7 +138,7 @@ The 32$^{nd}$ Chinese Physics Olympiad \textbf{\emph{Third Prize}} \hfill Oct 20
 \hspace*{\fill}
 
 \section{Professional Skills}
-\noindent \textbf{Languages}: Proficient in Python; Familiar with C/Embedded C, R, and JavaScript \\
+\noindent \textbf{Languages}: Proficient in Python and Matlab; Familiar with C/Embedded C, R, and JavaScript \\
 \textbf{Libraries}: TensorFlow (Preferred), PyTorch \\
 \textbf{Other frequently-used tools}: Git, Vim, Markdown, Shell, \LaTeX, Docker, K8s \\
 \textbf{English Language}: Fluent in English, CET-6 581, CET-4 577, Duolingo 110
