--- a/CV-Latex/ShuyueJia-CV.tex
+++ b/CV-Latex/ShuyueJia-CV.tex
@@ -8,7 +8,7 @@
 
 \hspace*{\fill}
 
-\longcontact{\href{mailto:shuyuej@ieee.org}{\nolinkurl{shuyuej@ieee.org}}}{(+852) 54604494}{\href{http://shuyuej.com/blo}{Bruce's Blog}}{\href{https://github.com/SuperBruceJia}{github.com/shuyuej}}{\href{https://shuyuej.com/}{http://shuyuej.com/}}
+\longcontact{\href{mailto:shuyuej@ieee.org}{\nolinkurl{shuyuej@ieee.org}}}{(+852) 54604494}{\href{http://shuyuej.com/blog}{Bruce's Blog}}{\href{https://github.com/SuperBruceJia}{github.com/shuyuej}}{\href{https://shuyuej.com/}{http://shuyuej.com/}}
 
 \hspace*{\fill} 
 
