--- a/CV-Latex/ShuyueJia-CV.tex
+++ b/CV-Latex/ShuyueJia-CV.tex
@@ -20,13 +20,13 @@
 
 \datedsubsection{Northeast Electric Power University (NEEPU), Jilin, China}{}{Sep 2016 - Jun 2020}
 \workitemsthree
-{Bachelor of Engineering / Intelligence Science and Technology Major, GPA - 80.26/100}
+{Bachelor of Engineering, Intelligence Science and Technology Major, GPA: 80.26/100}
 {Supervisor: \href{mailto:ymh7821@163.com}{Prof. Yimin Hou}, Research area: Deep Learning}
 {Thesis: Brain-Computer Interface Signals' Classification and Its Applications based on Deep Learning Methods}
 
 \datedsubsection{University of California, Irvine (UC Irvine), CA, United States}{}{Jul - Sep 2017}
 \workitemstwo
-{Summer School, Computer Science, GPA - 4.0/4.0}
+{Summer School, Computer Science, GPA: 4.0/4.0}
 {Selected coursework: Computer Systems and Architecture (A+), University Writing and Communication (Pass)}
 
 \hspace*{\fill} 
