--- a/CV-Latex/ShuyueJia-CV.tex
+++ b/CV-Latex/ShuyueJia-CV.tex
@@ -13,10 +13,10 @@
 \hspace*{\fill} 
 
 \section{Education}
-%\datedsubsection{City University of Hong Kong (CityU), Hong Kong}{}{May 2021 - Present}
-%\workitemstwo
-%{Master of Philosophy Computer Science}
-%{Supervisor: \href{https://www.cs.cityu.edu.hk/~shiqwang/}{Dr. Shiqi Wang}, Research area: Image Quality Assessment}
+\datedsubsection{City University of Hong Kong (CityU), Hong Kong}{}{May 2021 - Present}
+\workitemstwo
+{Master of Philosophy Computer Science}
+{Research area: Image Quality Assessment, Computer Vision}
 
 \datedsubsection{Northeast Electric Power University (NEEPU), Jilin, China}{}{Sep 2016 - Jun 2020}
 \workitemsthree
