--- a/CV-Latex/ShuyueJia-CV.tex
+++ b/CV-Latex/ShuyueJia-CV.tex
@@ -18,7 +18,7 @@
 {Master of Philosophy Computer Science}
 {Research area: Image Quality Assessment, Computer Vision}
 
-\datedsubsection{Northeast Electric Power University (NEEPU), Jilin, China}{}{Sep 2016 - Jun 2020}
+\datedsubsection{Northeast Electric Power University (NEEPU), Northeastern China}{}{Sep 2016 - Jun 2020}
 \workitemsthree
 {Bachelor of Engineering, Intelligence Science and Technology Major, GPA: 80.26/100}
 {Supervisor: \href{mailto:ymh7821@163.com}{Prof. Yimin Hou}, Research area: Deep Learning}
