--- a/CV-Latex/ShuyueJia-CV.tex
+++ b/CV-Latex/ShuyueJia-CV.tex
@@ -15,13 +15,13 @@
 \section{Education}
 \datedsubsection{City University of Hong Kong (CityU), Hong Kong}{}{May 2021 - Present}
 \workitemstwo
-{Master of Philosophy Computer Science}
-{Research area: Image Quality Assessment, Computer Vision}
+{Master of Philosophy - M.Phil. Computer Science, GPA: N/A}
+{Supervisor: \href{mailto:shiqwang@cityu.edu.hk}{Dr. Shiqi Wang}, Research area: Image Quality Assessment \& Optimization, Computer Vision}
 
 \datedsubsection{Northeast Electric Power University (NEEPU), Northeastern China}{}{Sep 2016 - Jun 2020}
 \workitemsthree
 {Bachelor of Engineering, Intelligence Science and Technology Major, GPA: 80.26/100}
-{Supervisor: \href{mailto:ymh7821@163.com}{Prof. Yimin Hou}, Research area: Deep Learning}
+{Supervisor: \href{mailto:ymh7821@163.com}{Prof. Yimin Hou}, Research area: EEG Signals Classification based on Deep Learning Methods}
 {Thesis: Brain-Computer Interface Signals' Classification and Its Applications based on Deep Learning Methods}
 
 \datedsubsection{University of California, Irvine (UC Irvine), CA, United States}{}{Jul - Sep 2017}
@@ -32,6 +32,12 @@
 \hspace*{\fill} 
 
 \section{Experience}
+\datedsubsection{AIA, Hong Kong}{Wealth Management Program}{May 2021}
+\workitemsthree
+{Completed a Two-day CL Confidence District's Wealth Management Program at AIA Hong Kong.}
+{Experienced practical insurance training, learnt financial services and insurance industry in HK, and enlarged the circle of friends.}
+{Awarded a further comprehensive training (full-time Summer Finance Internship opportunity).}
+
 \datedsubsection{Tencent Technology Inc., Beijing, China}{RS Research Intern}{Oct - Dec 2020}
 \workitemstwo
 {Assist with the unified architecture w.r.t. the \emph{Rerank} Module for Tencent Video Recommendation System (RS).}
