--- a/CV-Latex/ShuyueJia-CV.tex
+++ b/CV-Latex/ShuyueJia-CV.tex
@@ -18,7 +18,7 @@
 {Master of Philosophy - M.Phil. Computer Science, GPA: N/A}
 {Supervisor: \href{mailto:shiqwang@cityu.edu.hk}{Dr. Shiqi Wang}, Research area: Image Quality Assessment \& Optimization, Computer Vision}
 
-\datedsubsection{Northeast Electric Power University (NEEPU), Northeastern China}{}{Sep 2016 - Jun 2020}
+\datedsubsection{Northeast Electric Power University (NEEPU), China}{}{Sep 2016 - Jun 2020}
 \workitemsthree
 {Bachelor of Engineering, Intelligence Science and Technology Major, GPA: 80.26/100}
 {Supervisor: \href{mailto:ymh7821@163.com}{Prof. Yimin Hou}, Research area: EEG Signals Classification based on Deep Learning Methods}
@@ -38,22 +38,18 @@
 {Experienced practical insurance training, learnt financial services and insurance industry in HK, and enlarged the circle of friends.}
 {Awarded a further comprehensive training (full-time Summer Finance Internship opportunity).}
 
-\datedsubsection{Tencent Technology Inc., Beijing, China}{RS Research Intern}{Oct - Dec 2020}
+\datedsubsection{Tencent Technology Inc., Beijing, China}{Recommendation System Intern}{Oct - Dec 2020}
 \workitemstwo
 {Assist with the unified architecture w.r.t. the \emph{Rerank} Module for Tencent Video Recommendation System (RS).}
 {Conducted research on the Dynamic Graph Convolutional Neural Networks (DGCN) \href{https://shuyuej.com/files/Dynamic-GCN-Survey.pdf}{Survey} and learned Reinforcement Learning models.}
 
-\hspace*{\fill} 
-
-\datedsubsection{Philips Research, Shanghai, China}{NLP Research Intern}{Jul - Oct 2020}
+\datedsubsection{Philips Research, Shanghai, China}{Natural Language Processing Intern}{Jul - Oct 2020}
 \workitemsthree
 {\href{https://github.com/SuperBruceJia/Medical-Concept-Mapping}{Medical Concept Mapping}: three levels $\rightarrow$ BPE and FMM \& BMM Algorithms for Sub-words (Syntax-level), Word Vector Cosine Similarity (Semantics-level), and Knowledge Graph (Pragmatics-level).}
 {\href{https://github.com/SuperBruceJia/MedicalNER}{Medical NER}: compared the performances of different models $\rightarrow$ CRF++, Character-level BiLSTM + CRF, Character-level BiLSTM + Word-level BiLSTM / CNNs + CRF, and deployed the models using Flask and Docker as web apps. Codes are available \href{https://github.com/SuperBruceJia/pytorch-flask-deploy-webapp}{here}, and the Docker Images are available on \href{https://hub.docker.com/u/shuyuej}{Docker Hub}.}
 {\href{https://github.com/SuperBruceJia/dynamic-web-crawlering-python}{Dynamic Webs Crawling}: learned and crawled 620,000 words from NSTL using Python parallel package threading and other tricks to prevent Anti-reptile.}
 
-\hspace*{\fill} 
-
-\datedsubsection{Tsinghua University, Beijing, China}{NLP Summer Intern}{Jun - Aug 2019}
+\datedsubsection{Tsinghua University, Beijing, China}{Summer Intern}{Jun - Aug 2019}
 \workitemsthree
 {Natural Language Processing (NLP) Intern at State Key Laboratory of Intelligent Technology and Systems, Tsinghua University, China.}
 {I was in a team that was responsible for building a salesman training system, which was a piece of insurance dialogue systems. During intern, I led the effort to create a \href{https://github.com/SuperBruceJia/Chinese-Chat-Title-NER-BERT-BiLSTM-CRF}{Chinese Chat Title Named Entity Recognition (NER)} via the BERT-BiLSTM-CRF model, and then matched the formal name with the recognized title through rules. \\NER Dataset: 30,676 samples, 96.73\% accuracy on 550 samples.}
@@ -121,13 +117,13 @@
 
 \hspace*{\fill} 
 
-\noindent \textbf{Third China Data Mining Competition, Butterfly Recognition} \href{https://ccdm2018.sdufe.edu.cn/info/1012/1212.htm}{[Website]}  \href{https://github.com/SuperBruceJia/YOLO-V2-Object-Detection-Implementation}{[Code]} \hfill Oct 2017 - May 2018 
-\workitemsthree
-{Successfully implemented YOLO-V2 and Faster-RCNN object detection algorithms under Windows \& Ubuntu OS using the official butterfly dataset.}
-{Used affine transformation, noise addition, contrast enhancement, rotation, symmetry changing, and other methods to extend the dataset.}
-{YOLO-V2 Results (Team A106): 71.42\% Averaged IoU, and unsatisfactory classification accuracy.}
-
-\hspace*{\fill} 
+%\noindent \textbf{Third China Data Mining Competition, Butterfly Recognition} \href{https://ccdm2018.sdufe.edu.cn/info/1012/1212.htm}{[Website]}  \href{https://github.com/SuperBruceJia/YOLO-V2-Object-Detection-Implementation}{[Code]} \hfill Oct 2017 - May 2018 
+%\workitemsthree
+%{Successfully implemented YOLO-V2 and Faster-RCNN object detection algorithms under Windows \& Ubuntu OS using the official butterfly dataset.}
+%{Used affine transformation, noise addition, contrast enhancement, rotation, symmetry changing, and other methods to extend the dataset.}
+%{YOLO-V2 Results (Team A106): 71.42\% Averaged IoU, and unsatisfactory classification accuracy.}
+%
+%\hspace*{\fill} 
 
 \section{Awards}
 \noindent 2019 Interdisciplinary Contest In Modeling (United States) \textbf{\emph{Honorable Mention}} \hfill Apr 2019\\
@@ -136,10 +132,10 @@
 2018 NEEPU Outstanding Student Leader \hfill Oct 2018\\
 Innovation Scholarship of NEEPU \textbf{\emph{Winner}} \hfill 2018/2019\\
 Academic Excellence Scholarship of NEEPU \textbf{\emph{Third Prize}} \hfill 2017/2018/2019/2020 \\
-Jilin City International Marathon, Half Marathon, Placed \emph{148 / 5000} \hfill Jun 2017\\
+%Jilin City International Marathon, Half Marathon, Placed \emph{148 / 5000} \hfill Jun 2017\\
 \emph{Student Member} of IEEE, ACM, and CCF \hfill 2019/2020/2021\\
-2015 National High School Math League \textbf{\emph{Second Prize}} \hfill Sep 2015\\
-The 32$^{nd}$ Chinese Physics Olympiad \textbf{\emph{Third Prize}} \hfill Oct 2015
+%2015 National High School Math League \textbf{\emph{Second Prize}} \hfill Sep 2015\\
+%The 32$^{nd}$ Chinese Physics Olympiad \textbf{\emph{Third Prize}} \hfill Oct 2015
 
 \hspace*{\fill}
 
