--- a/CV-Latex/ShuyueJia-CV.tex
+++ b/CV-Latex/ShuyueJia-CV.tex
@@ -133,7 +133,7 @@
 Innovation Scholarship of NEEPU \textbf{\emph{Winner}} \hfill 2018/2019\\
 Academic Excellence Scholarship of NEEPU \textbf{\emph{Third Prize}} \hfill 2017/2018/2019/2020 \\
 %Jilin City International Marathon, Half Marathon, Placed \emph{148 / 5000} \hfill Jun 2017\\
-\emph{Student Member} of IEEE, ACM, and CCF \hfill 2019/2020/2021\\
+\emph{Student Member} of IEEE, ACM, and CCF \hfill 2019/2020/2021
 %2015 National High School Math League \textbf{\emph{Second Prize}} \hfill Sep 2015\\
 %The 32$^{nd}$ Chinese Physics Olympiad \textbf{\emph{Third Prize}} \hfill Oct 2015
 
