--- a/CV-Latex/ShuyueJia-CV.tex
+++ b/CV-Latex/ShuyueJia-CV.tex
@@ -16,7 +16,7 @@
 \datedsubsection{City University of Hong Kong (CityU), Hong Kong}{}{May 2021 - Present}
 \workitemstwo
 {Master of Philosophy - M.Phil. Computer Science, GPA: N/A}
-{Supervisor: \href{mailto:shiqwang@cityu.edu.hk}{Dr. Shiqi Wang}, Research area: Image Quality Assessment \& Optimization, Computer Vision}
+{Supervisor: \href{mailto:shiqwang@cityu.edu.hk}{Dr. Shiqi Wang}, Research area: Image Quality Assessment \& Perceptual Optimization}
 
 \datedsubsection{Northeast Electric Power University (NEEPU), China}{}{Sep 2016 - Jun 2020}
 \workitemsthree
