--- a/CV-Latex/ShuyueJia-CV.tex
+++ b/CV-Latex/ShuyueJia-CV.tex
@@ -25,7 +25,7 @@
 %{Thesis: Brain-Computer Interface Signals' Classification and Its Applications based on Deep Learning Methods}
 
 \datedsubsection{University of California, Irvine (UC Irvine), CA, USA}{}{Jul - Sep 2017}
-\workitemsone
+\workitemstwo
 {Summer School, Computer Science, GPA: 4.0/4.0}
 {Selected coursework: Computer Systems and Architecture (A+), University Writing and Communication (Pass)}
 
