--- a/CV-Latex/ShuyueJia-CV.tex
+++ b/CV-Latex/ShuyueJia-CV.tex
@@ -129,7 +129,7 @@
 %2018 Interdisciplinary Contest In Modeling (United States) \textbf{\emph{Successful Participant}} \hfill Apr 2018\\
 2018 NEEPU Outstanding Student Leader \hfill Oct 2018\\
 Innovation Scholarship of NEEPU \textbf{\emph{Winner}} \hfill 2018/2019\\
-Academic Excellence Scholarship of NEEPU \textbf{\emph{Third Prize}} \hfill 2017/2018/2019/2020 \\
+Academic Excellence Scholarship of NEEPU \textbf{\emph{Third Prize}} \hfill 2017/2018/2019/2020
 %Jilin City International Marathon, Half Marathon, Placed \emph{148 / 5000} \hfill Jun 2017\\
 %\emph{Student Member} of IEEE, ACM, and CCF \hfill 2019/2020/2021
 %2015 National High School Math League \textbf{\emph{Second Prize}} \hfill Sep 2015\\
