--- a/CV-Latex/ShuyueJia-CV.tex
+++ b/CV-Latex/ShuyueJia-CV.tex
@@ -8,7 +8,13 @@
 
 \hspace*{\fill}
 
-\longcontact{\href{mailto:shuyuej@ieee.org}{\nolinkurl{shuyuej@ieee.org}}}{(+852) 54604494 \& (+1) 2132965422}{\href{https://github.com/SuperBruceJia}{GitHub}}{\href{http://shuyuej.com/blog}{Blog}}{\href{https://shuyuej.com/}{Personal Website}}
+\longcontact
+{\href{mailto:shuyuej@ieee.org}{\nolinkurl{shuyuej@ieee.org}}}
+{(+852) 54604494}
+{\href{https://github.com/SuperBruceJia}{GitHub}}
+{\href{https://resume.github.io/?SuperBruceJia}{GitHub Resume}}
+{\href{http://shuyuej.com/blog}{Blog}}
+{\href{https://shuyuej.com/}{Personal Profile}}
 
 \hspace*{\fill} 
 
@@ -22,7 +28,6 @@
 \workitemstwo
 {Bachelor of Engineering, Intelligence Science and Technology Major, GPA: 80.26/100}
 {Supervisor: \href{mailto:ymh7821@163.com}{Prof. Yimin Hou}, Research area: EEG Signals Classification based on Deep Learning Methods}
-%{Thesis: Brain-Computer Interface Signals' Classification and Its Applications based on Deep Learning Methods}
 
 \datedsubsection{University of California, Irvine (UC Irvine), CA, USA}{}{Jul - Sep 2017}
 \workitemstwo
