--- a/CV-Latex/ShuyueJia-CV.tex
+++ b/CV-Latex/ShuyueJia-CV.tex
@@ -143,9 +143,9 @@ Academic Excellence Scholarship of NEEPU \textbf{\emph{Third Prize}} \hfill 2017
 \hspace*{\fill}
 
 \section{Professional Skills}
-\noindent \textbf{Languages}: Familiar with Python and Matlab; Little experience with C/Embedded C, R, HTML and JavaScript \\
-\textbf{Libraries}: Familiar with TensorFlow (Preferred), PyTorch \\
-\textbf{Other frequently-used tools}: Familiar with Git, Vim, Markdown, Shell Basic Command, \LaTeX, Docker and K8s Basic \\
+\noindent \textbf{Languages}: Proficient in Python and Matlab; Familiar with C, R, HTML and JavaScript \\
+\textbf{Libraries}: TensorFlow, PyTorch \\
+\textbf{Other frequently-used tools}: Git, Vim, Markdown, Shell, \LaTeX, Docker and K8s \\
 \textbf{English Language}: Fluent in English, CET-6 581, CET-4 577, Duolingo 110
 
 \end{document} ​
