--- a/CV-Latex/ShuyueJia-CV.tex
+++ b/CV-Latex/ShuyueJia-CV.tex
@@ -37,6 +37,10 @@
 \hspace*{\fill} 
 
 \section{Experience}
+\datedsubsection{City University of Hong Kong}{Part-time Research Assistant}{Sep 2021 - Present}
+\workitemsone
+{Funded by my mentor to cover tuition fees during my master's study.}
+
 \datedsubsection{AIA, Hong Kong, China}{Wealth Management Program}{May 2021}
 \workitemstwo
 {Completed a Two-day CL Confidence District's Wealth Management Program at AIA Hong Kong.}
@@ -131,14 +135,14 @@
 \section{Awards}
 \noindent 2019 Interdisciplinary Contest In Modeling (United States) \textbf{\emph{Honorable Mention}} \hfill Apr 2019\\
 2018 Mathematical Contest In Modeling (Jilin, China) \textbf{\emph{First Prize}} \hfill Aug 2018\\
-%2018 Interdisciplinary Contest In Modeling (United States) \textbf{\emph{Successful Participant}} \hfill Apr 2018\\
+2018 Interdisciplinary Contest In Modeling (United States) \textbf{\emph{Successful Participant}} \hfill Apr 2018\\
 2018 NEEPU Outstanding Student Leader \hfill Oct 2018\\
 Innovation Scholarship of NEEPU \textbf{\emph{Winner}} \hfill 2018/2019\\
 Academic Excellence Scholarship of NEEPU \textbf{\emph{Third Prize}} \hfill 2017/2018/2019/2020
 %Jilin City International Marathon, Half Marathon, Placed \emph{148 / 5000} \hfill Jun 2017\\
 %\emph{Student Member} of IEEE, ACM, and CCF \hfill 2019/2020/2021
-%2015 National High School Math League \textbf{\emph{Second Prize}} \hfill Sep 2015\\
-%The 32$^{nd}$ Chinese Physics Olympiad \textbf{\emph{Third Prize}} \hfill Oct 2015
+2015 National High School Math League \textbf{\emph{Second Prize}} \hfill Sep 2015\\
+The 32$^{nd}$ Chinese Physics Olympiad \textbf{\emph{Third Prize}} \hfill Oct 2015
 
 \hspace*{\fill}
 
