--- a/CV-Latex/ShuyueJia-CV.tex
+++ b/CV-Latex/ShuyueJia-CV.tex
@@ -19,7 +19,7 @@
 \hspace*{\fill} 
 
 \section{Education}
-\datedsubsection{City University of Hong Kong (CityU), Hong Kong, China}{}{May 2021 - Present}
+\datedsubsection{City University of Hong Kong (CityU), Hong Kong}{}{May 2021 - Present}
 \workitemstwo
 {Master of Philosophy - M.Phil. Computer Science, GPA: N/A}
 {Supervisor: \href{mailto:shiqwang@cityu.edu.hk}{Dr. Shiqi Wang}, Research area: Image Quality Assessment \& Perceptual Optimization}
@@ -41,23 +41,23 @@
 \workitemsone
 {Funded by my mentor to cover tuition fees during my master's study.}
 
-\datedsubsection{AIA, Hong Kong, China}{Wealth Management Program}{May 2021}
-\workitemstwo
-{Completed a Two-day CL Confidence District's Wealth Management Program at AIA Hong Kong.}
-{Experienced practical insurance training, learnt financial services and insurance industry in HK, and enlarged the circle of friends.}
+%\datedsubsection{AIA, Hong Kong, China}{Wealth Management Program}{May 2021}
+%\workitemstwo
+%{Completed a Two-day CL Confidence District's Wealth Management Program at AIA Hong Kong.}
+%{Experienced practical insurance training, learnt financial services and insurance industry in HK, and enlarged the circle of friends.}
 
-\datedsubsection{Tencent, Beijing, China}{Recommendation System Intern}{Oct - Dec 2020}
+\datedsubsection{Tencent Video, Beijing}{Recommendation System Intern}{Oct - Dec 2020}
 \workitemstwo
 {Assist with the unified architecture w.r.t. the \emph{Rerank} Module for Tencent Video Recommendation System (RS).}
 {Conducted research on the Dynamic Graph Convolutional Neural Networks (DGCN) \href{https://shuyuej.com/files/Dynamic-GCN-Survey.pdf}{Survey} and learned Reinforcement Learning models.}
 
-\datedsubsection{Philips, Shanghai, China}{Natural Language Processing Intern}{Jul - Oct 2020}
+\datedsubsection{Philips Research, Shanghai}{Natural Language Processing Intern}{Jul - Oct 2020}
 \workitemsthree
 {\href{https://github.com/SuperBruceJia/Medical-Concept-Mapping}{Medical Concept Mapping}: three levels $\rightarrow$ BPE and FMM \& BMM Algorithms for Sub-words (Syntax-level), Word Vector Cosine Similarity (Semantics-level), and Knowledge Graph (Pragmatics-level).}
 {\href{https://github.com/SuperBruceJia/MedicalNER}{Medical NER}: compared the performances of different models $\rightarrow$ CRF++, Character-level BiLSTM + CRF, Character-level BiLSTM + Word-level BiLSTM / CNNs + CRF, and deployed the models using Flask and Docker as web apps. Codes are available \href{https://github.com/SuperBruceJia/pytorch-flask-deploy-webapp}{here}, and the Docker Images are available on \href{https://hub.docker.com/u/shuyuej}{Docker Hub}.}
 {\href{https://github.com/SuperBruceJia/dynamic-web-crawlering-python}{Dynamic Webs Crawling}: learned and crawled 620,000 words from NSTL using Python parallel package threading and other tricks to prevent Anti-reptile.}
 
-\datedsubsection{Tsinghua University, Beijing, China}{Summer Intern}{Jun - Aug 2019}
+\datedsubsection{Tsinghua University, Beijing}{Summer Intern}{Jun - Aug 2019}
 \workitemstwo
 {I was in a team that was responsible for building a salesman training system, which was a piece of insurance dialogue systems. During intern, I led the effort to create a \href{https://github.com/SuperBruceJia/Chinese-Chat-Title-NER-BERT-BiLSTM-CRF}{Chinese Chat Title Named Entity Recognition (NER)} via the BERT-BiLSTM-CRF model, and then matched the formal name with the recognized title through rules. (NER Dataset: 30,676 samples, 96.73\% accuracy on 550 samples.)}
 {I also assisted in testing the sales training review system, and integrated salesman’s dialogue according to different difficulty levels, in verifying the reliability of the system.}
