--- a/CV-Latex/ShuyueJia-CV.tex
+++ b/CV-Latex/ShuyueJia-CV.tex
@@ -37,15 +37,6 @@
 \hspace*{\fill} 
 
 \section{Experience}
-\datedsubsection{City University of Hong Kong}{Part-time Research Assistant}{Sep 2021 - Present}
-\workitemsone
-{Funded by my mentor to cover tuition fees during my master's study.}
-
-%\datedsubsection{AIA, Hong Kong, China}{Wealth Management Program}{May 2021}
-%\workitemstwo
-%{Completed a Two-day CL Confidence District's Wealth Management Program at AIA Hong Kong.}
-%{Experienced practical insurance training, learnt financial services and insurance industry in HK, and enlarged the circle of friends.}
-
 \datedsubsection{Tencent Video, Beijing}{Recommendation System Intern}{Oct - Dec 2020}
 \workitemstwo
 {Assist with the unified architecture w.r.t. the \emph{Rerank} Module for Tencent Video Recommendation System (RS).}
@@ -107,22 +98,22 @@
 
 \hspace*{\fill}
 
-%\section{Selected Projects}
-%\noindent \textbf{EEG-DL: A Deep Learning library for EEG Tasks (Signals) Classification} \href{https://github.com/SuperBruceJia/EEG-DL}{[Code]} \hfill May 2020 
-%\workitemsfour
-%{EEG-DL is a Deep Learning (DL) library written by TensorFlow for EEG Tasks (Signals) Classification. (\emph{Undergraduate graduation project})}
-%{Implemented 20+ popular algorithms including DNN, CNN, RNN-based, GCN with hands-on tutorials.}
-%{Finished writing \emph{three papers} based on this project as shown in my \emph{Publications}.}
-%{Comprehensive codes for EEG signals processing and classification \emph{research}, and got 100+ GitHub stars.}
-%
-%\hspace*{\fill} 
-%
-%\noindent \textbf{Shipwreck Sonar Image Segmentation based on Entropy Method} \href{https://github.com/SuperBruceJia/Sonar-Image-Segmentation-through-Entropy-Method}{[Code]} \hfill Jun - Sep 2018 
-%\workitemstwo
-%{Pre-processed sonar images to enhance the contract between the hull and reverberation area, which consists of discrete cosine filtering (DCT)$\rightarrow$edge detection (Roberts Operator)$\rightarrow$threshold segmentation via a one-dimensional histogram to locate the ship$\rightarrow$morphological expansion by tapered concentric rings through Matlab.}
-%{The proposed method improved segmentation accuracy (86\%+) compared with that without the pre-processed stage (no more than 80\%) on dozens of sonar images.}
+\section{Selected Projects}
+\noindent \textbf{EEG-DL: A Deep Learning library for EEG Tasks (Signals) Classification} \href{https://github.com/SuperBruceJia/EEG-DL}{[Code]} \hfill May 2020 
+\workitemsfour
+{EEG-DL is a Deep Learning (DL) library written by TensorFlow for EEG Tasks (Signals) Classification. (\emph{Undergraduate graduation project})}
+{Implemented 20+ popular algorithms including DNN, CNN, RNN-based, GCN with hands-on tutorials.}
+{Finished writing \emph{three papers} based on this project as shown in my \emph{Publications}.}
+{Comprehensive codes for EEG signals processing and classification \emph{research}, and got 100+ GitHub stars.}
 
-%\hspace*{\fill} 
+\hspace*{\fill} 
+
+\noindent \textbf{Shipwreck Sonar Image Segmentation based on Entropy Method} \href{https://github.com/SuperBruceJia/Sonar-Image-Segmentation-through-Entropy-Method}{[Code]} \hfill Jun - Sep 2018 
+\workitemstwo
+{Pre-processed sonar images to enhance the contract between the hull and reverberation area, which consists of discrete cosine filtering (DCT)$\rightarrow$edge detection (Roberts Operator)$\rightarrow$threshold segmentation via a one-dimensional histogram to locate the ship$\rightarrow$morphological expansion by tapered concentric rings through Matlab.}
+{The proposed method improved segmentation accuracy (86\%+) compared with that without the pre-processed stage (no more than 80\%) on dozens of sonar images.}
+
+\hspace*{\fill} 
 
 %\noindent \textbf{Third China Data Mining Competition, Butterfly Recognition} \href{https://ccdm2018.sdufe.edu.cn/info/1012/1212.htm}{[Website]}  \href{https://github.com/SuperBruceJia/YOLO-V2-Object-Detection-Implementation}{[Code]} \hfill Oct 2017 - May 2018 
 %\workitemsthree
