--- a/CV-Latex/ShuyueJia-CV.tex
+++ b/CV-Latex/ShuyueJia-CV.tex
@@ -21,8 +21,8 @@
 \section{Education}
 \datedsubsection{City University of Hong Kong (CityU), Hong Kong}{}{May 2021 - Present}
 \workitemstwo
-{Master of Philosophy - M.Phil. Computer Science}
-{Research area: Image Quality Assessment \& Perceptual Optimization}
+{Master of Philosophy Computer Science}
+{Supervisor: \href{mailto:shiqwang@cityu.edu.hk}{Dr. Shiqi Wang}, Research area: Image Quality Assessment \& Perceptual Optimization}
 
 \datedsubsection{Northeast Electric Power University (NEEPU), Jilin, China}{}{Sep 2016 - Jun 2020}
 \workitemstwo
