--- a/CV-Latex/ShuyueJia-CV.tex
+++ b/CV-Latex/ShuyueJia-CV.tex
@@ -19,17 +19,17 @@
 \hspace*{\fill} 
 
 \section{Education}
-\datedsubsection{City University of Hong Kong (CityU), Hong Kong}{}{May 2021 - Present}
+\datedsubsection{City University of Hong Kong, Hong Kong}{}{May 2021 - Present}
 \workitemstwo
-{Master of Philosophy Computer Science}
-{Supervisor: \href{mailto:shiqwang@cityu.edu.hk}{Dr. Shiqi Wang}, Research area: Image Quality Assessment \& Perceptual Optimization}
+{M.Phil. Computer Science}
+{Supervisor: \href{mailto:shiqwang@cityu.edu.hk}{Dr. Shiqi Wang}, Research area: Image Quality Assessment}
 
-\datedsubsection{Northeast Electric Power University (NEEPU), Jilin, China}{}{Sep 2016 - Jun 2020}
+\datedsubsection{Northeast Electric Power University, China}{}{Sep 2016 - Jun 2020}
 \workitemstwo
-{Bachelor of Engineering, Intelligence Science and Technology Major, GPA: 80.26/100}
+{B.Eng., Intelligence Science and Technology Major, GPA: 80.26/100}
 {Supervisor: \href{mailto:ymh7821@163.com}{Prof. Yimin Hou}, Research area: EEG Signals Classification based on Deep Learning Methods}
 
-\datedsubsection{University of California, Irvine (UC Irvine), CA, USA}{}{Jul - Sep 2017}
+\datedsubsection{University of California, Irvine, CA, USA}{}{Jul - Sep 2017}
 \workitemstwo
 {Summer School, Computer Science, GPA: 4.0/4.0}
 {Selected coursework: Computer Systems and Architecture (A+), University Writing and Communication (Pass)}
@@ -42,13 +42,13 @@
 {Assist with the unified architecture w.r.t. the \emph{Rerank} Module for Tencent Video Recommendation System (RS).}
 {Conducted research on the Dynamic Graph Convolutional Neural Networks (DGCN) \href{https://shuyuej.com/files/Dynamic-GCN-Survey.pdf}{Survey} and learned Reinforcement Learning models.}
 
-\datedsubsection{Philips Research, Shanghai}{Natural Language Processing Intern}{Jul - Oct 2020}
+\datedsubsection{Philips Research, Shanghai}{NLP Intern}{Jul - Oct 2020}
 \workitemsthree
 {\href{https://github.com/SuperBruceJia/Medical-Concept-Mapping}{Medical Concept Mapping}: three levels $\rightarrow$ BPE and FMM \& BMM Algorithms for Sub-words (Syntax-level), Word Vector Cosine Similarity (Semantics-level), and Knowledge Graph (Pragmatics-level).}
 {\href{https://github.com/SuperBruceJia/MedicalNER}{Medical NER}: compared the performances of different models $\rightarrow$ CRF++, Character-level BiLSTM + CRF, Character-level BiLSTM + Word-level BiLSTM / CNNs + CRF, and deployed the models using Flask and Docker as web apps. Codes are available \href{https://github.com/SuperBruceJia/pytorch-flask-deploy-webapp}{here}, and the Docker Images are available on \href{https://hub.docker.com/u/shuyuej}{Docker Hub}.}
 {\href{https://github.com/SuperBruceJia/dynamic-web-crawlering-python}{Dynamic Webs Crawling}: learned and crawled 620,000 words from NSTL using Python parallel package threading and other tricks to prevent Anti-reptile.}
 
-\datedsubsection{Tsinghua University, Beijing}{Summer Intern}{Jun - Aug 2019}
+\datedsubsection{Tsinghua University, Beijing}{NLP Summer Intern}{Jun - Aug 2019}
 \workitemstwo
 {I was in a team that was responsible for building a salesman training system, which was a piece of insurance dialogue systems. During intern, I led the effort to create a \href{https://github.com/SuperBruceJia/Chinese-Chat-Title-NER-BERT-BiLSTM-CRF}{Chinese Chat Title Named Entity Recognition (NER)} via the BERT-BiLSTM-CRF model, and then matched the formal name with the recognized title through rules. (NER Dataset: 30,676 samples, 96.73\% accuracy on 550 samples.)}
 {I also assisted in testing the sales training review system, and integrated salesman’s dialogue according to different difficulty levels, in verifying the reliability of the system.}
@@ -101,7 +101,7 @@
 \section{Selected Projects}
 \noindent \textbf{EEG-DL: A Deep Learning library for EEG Tasks (Signals) Classification} \href{https://github.com/SuperBruceJia/EEG-DL}{[Code]} \hfill May 2020 
 \workitemsfour
-{EEG-DL is a Deep Learning (DL) library written by TensorFlow for EEG Tasks (Signals) Classification. (\emph{Undergraduate graduation project})}
+{EEG-DL is a Deep Learning (DL) library written by TensorFlow for EEG Tasks (Signals) Classification.}
 {Implemented 20+ popular algorithms including DNN, CNN, RNN-based, GCN with hands-on tutorials.}
 {Finished writing \emph{three papers} based on this project as shown in my \emph{Publications}.}
 {Comprehensive codes for EEG signals processing and classification \emph{research}, and got 100+ GitHub stars.}
@@ -115,32 +115,16 @@
 
 \hspace*{\fill} 
 
-%\noindent \textbf{Third China Data Mining Competition, Butterfly Recognition} \href{https://ccdm2018.sdufe.edu.cn/info/1012/1212.htm}{[Website]}  \href{https://github.com/SuperBruceJia/YOLO-V2-Object-Detection-Implementation}{[Code]} \hfill Oct 2017 - May 2018 
-%\workitemsthree
-%{Successfully implemented YOLO-V2 and Faster-RCNN object detection algorithms under Windows \& Ubuntu OS using the official butterfly dataset.}
-%{Used affine transformation, noise addition, contrast enhancement, rotation, symmetry changing, and other methods to extend the dataset.}
-%{YOLO-V2 Results (Team A106): 71.42\% Averaged IoU, and unsatisfactory classification accuracy.}
-%
-%\hspace*{\fill} 
-
 \section{Awards}
-\noindent 2019 Interdisciplinary Contest In Modeling (United States) \textbf{\emph{Honorable Mention}} \hfill Apr 2019\\
+\noindent 2019 Interdisciplinary Contest In Modeling \textbf{\emph{Honorable Mention}} \hfill Apr 2019\\
 2018 Mathematical Contest In Modeling (Jilin, China) \textbf{\emph{First Prize}} \hfill Aug 2018\\
-2018 Interdisciplinary Contest In Modeling (United States) \textbf{\emph{Successful Participant}} \hfill Apr 2018\\
-2018 NEEPU Outstanding Student Leader \hfill Oct 2018\\
-Innovation Scholarship of NEEPU \textbf{\emph{Winner}} \hfill 2018/2019\\
-Academic Excellence Scholarship of NEEPU \textbf{\emph{Third Prize}} \hfill 2017/2018/2019/2020\\
-%Jilin City International Marathon, Half Marathon, Placed \emph{148 / 5000} \hfill Jun 2017\\
-%\emph{Student Member} of IEEE, ACM, and CCF \hfill 2019/2020/2021
 2015 National High School Math League (Shanxi, China) \textbf{\emph{Second Prize}} \hfill Sep 2015
-%The 32$^{nd}$ Chinese Physics Olympiad \textbf{\emph{Third Prize}} \hfill Oct 2015
 
 \hspace*{\fill}
 
 \section{Professional Skills}
-\noindent \textbf{Languages}: Proficient in Python and Matlab; Familiar with C, R, HTML and JavaScript \\
+\noindent \textbf{Languages}: Python, C++ \\
 \textbf{Libraries}: TensorFlow, PyTorch \\
-\textbf{Other frequently-used tools}: Git, Vim, Markdown, Shell, \LaTeX, Docker and K8s \\
-\textbf{English Language}: Fluent in English, CET-6 581, CET-4 577, Duolingo 110
-
+\textbf{Other frequently-used tools}: \LaTeX, Git, Docker, K8s \\
+\textbf{English Language}: CET-6 581, Fluent in English
 \end{document} ​
