--- a/CV-Latex/ShuyueJia-CV.tex
+++ b/CV-Latex/ShuyueJia-CV.tex
@@ -12,7 +12,7 @@
 {\href{mailto:shuyuej@ieee.org}{\nolinkurl{shuyuej@ieee.org}}}
 {(+852) 54604494}
 {\href{https://github.com/SuperBruceJia}{GitHub}}
-{\href{https://resume.github.io/?SuperBruceJia}{GitHub Resume}}
+{\href{https://resume.github.io/?SuperBruceJia}{GitHub Résumé}}
 {\href{http://shuyuej.com/blog}{Blog}}
 {\href{https://shuyuej.com/}{Personal Profile}}
 
