--- a/CV-Latex/ShuyueJia-CV.tex
+++ b/CV-Latex/ShuyueJia-CV.tex
@@ -116,8 +116,11 @@
 \hspace*{\fill} 
 
 \section{Awards}
-\noindent 2019 Interdisciplinary Contest In Modeling \textbf{\emph{Honorable Mention}} \hfill Apr 2019\\
+
+\noindent 2021 Standard Chartered Hong Kong Marathon, Half Marathon \textbf{\emph{placed 318 / 6000 (01:38:14)}} \hfill Oct 2021\\
+2019 Interdisciplinary Contest In Modeling \textbf{\emph{Honorable Mention}} \hfill Apr 2019\\
 2018 Mathematical Contest In Modeling (Jilin, China) \textbf{\emph{First Prize}} \hfill Aug 2018\\
+2017 Jilin City International Marathon, Half Marathon \textbf{\emph{placed 148 / 4000 (01:47:36)}} \hfill Jun 2017\\
 2015 National High School Math League (Shanxi, China) \textbf{\emph{Second Prize}} \hfill Sep 2015
 
 \hspace*{\fill}
