--- a/CV-Latex/ShuyueJia-CV.tex
+++ b/CV-Latex/ShuyueJia-CV.tex
@@ -22,7 +22,7 @@
 \datedsubsection{City University of Hong Kong, Hong Kong}{}{May 2021 - Present}
 \workitemstwo
 {M.Phil. Computer Science}
-{Supervisor: \href{mailto:shiqwang@cityu.edu.hk}{Dr. Shiqi Wang}, Research area: Image Quality Assessment}
+{Research area: Image Quality Assessment}
 
 \datedsubsection{Northeast Electric Power University, China}{}{Sep 2016 - Jun 2020}
 \workitemstwo
