--- a/CV-Latex/ShuyueJia-CV.tex
+++ b/CV-Latex/ShuyueJia-CV.tex
@@ -19,9 +19,9 @@
 \hspace*{\fill} 
 
 \section{Education}
-\datedsubsection{City University of Hong Kong, Hong Kong}{}{May 2021 - Present}
+\datedsubsection{City University of Hong Kong, China}{}{May 2021 - Present}
 \workitemstwo
-{M.Phil. Computer Science}
+{M.Phil., Computer Science Major}
 {Research area: Image Quality Assessment}
 
 \datedsubsection{Northeast Electric Power University, China}{}{Sep 2016 - Jun 2020}
@@ -37,21 +37,11 @@
 \hspace*{\fill} 
 
 \section{Experience}
-\datedsubsection{Tencent Video, Beijing}{Recommendation System Intern}{Oct - Dec 2020}
-\workitemstwo
-{Assist with the unified architecture w.r.t. the \emph{Rerank} Module for Tencent Video Recommendation System (RS).}
-{Conducted research on the Dynamic Graph Convolutional Neural Networks (DGCN) \href{https://shuyuej.com/files/Dynamic-GCN-Survey.pdf}{Survey} and learned Reinforcement Learning models.}
-
 \datedsubsection{Philips Research, Shanghai}{NLP Intern}{Jul - Oct 2020}
 \workitemsthree
 {\href{https://github.com/SuperBruceJia/Medical-Concept-Mapping}{Medical Concept Mapping}: three levels $\rightarrow$ BPE and FMM \& BMM Algorithms for Sub-words (Syntax-level), Word Vector Cosine Similarity (Semantics-level), and Knowledge Graph (Pragmatics-level).}
 {\href{https://github.com/SuperBruceJia/MedicalNER}{Medical NER}: compared the performances of different models $\rightarrow$ CRF++, Character-level BiLSTM + CRF, Character-level BiLSTM + Word-level BiLSTM / CNNs + CRF, and deployed the models using Flask and Docker as web apps. Codes are available \href{https://github.com/SuperBruceJia/pytorch-flask-deploy-webapp}{here}, and the Docker Images are available on \href{https://hub.docker.com/u/shuyuej}{Docker Hub}.}
 {\href{https://github.com/SuperBruceJia/dynamic-web-crawlering-python}{Dynamic Webs Crawling}: learned and crawled 620,000 words from NSTL using Python parallel package threading and other tricks to prevent Anti-reptile.}
-
-\datedsubsection{Tsinghua University, Beijing}{NLP Summer Intern}{Jun - Aug 2019}
-\workitemstwo
-{I was in a team that was responsible for building a salesman training system, which was a piece of insurance dialogue systems. During intern, I led the effort to create a \href{https://github.com/SuperBruceJia/Chinese-Chat-Title-NER-BERT-BiLSTM-CRF}{Chinese Chat Title Named Entity Recognition (NER)} via the BERT-BiLSTM-CRF model, and then matched the formal name with the recognized title through rules. (NER Dataset: 30,676 samples, 96.73\% accuracy on 550 samples.)}
-{I also assisted in testing the sales training review system, and integrated salesman’s dialogue according to different difficulty levels, in verifying the reliability of the system.}
 
 \hspace*{\fill} 
 
@@ -64,39 +54,18 @@
 \hspace*{\fill} 
 
 \workitemsone
+{Deep Feature Mining via Attention-based BiLSTM-GCN for Human Motor Imagery Recognition. \href{https://arxiv.org/abs/2005.00777}{[Paper]}\href{https://github.com/SuperBruceJia/EEG-DL}{[Code]}\\
+	Yimin Hou, \textbf{Shuyue Jia}, Xiangmin Lun, Shu Zhang, Tao Chen, Fang Wang, Jinglei Lv. \\
+	\emph{arXiv preprint arXiv:2005.00777}, 2021. (Under Review)}
+	
+\hspace*{\fill}
+
+\workitemsone
 {GCNs-Net: A Graph Convolutional Neural Network Approach for Decoding Time-resolved EEG Motor Imagery Signals. \href{https://arxiv.org/abs/2006.08924}{[Paper]} \href{https://shuyuej.com/files/GCNs-Net.pdf}{[Spectral-GCN-Presentation]} \href{https://shuyuej.com/files/Dynamic-GCN-Survey.pdf}{[Dynamic-GCN-Presentation]} \href{https://github.com/SuperBruceJia/EEG-DL}{[Code]}\\
-	Xiangmin Lun, \textbf{Shuyue Jia (Corresponding Author)}, Yimin Hou, Yan Shi, and Yang Li.\\
-	\emph{arXiv preprint arXiv:2006.08924}, 2021. (Under Review)}
+	Yimin Hou, \textbf{Shuyue Jia}, Xiangmin Lun, Shu Zhang, Tao Chen, Fang Wang, Jinglei Lv. \\
+	\emph{arXiv preprint arXiv:2006.08924}, 2021.}
 
 \hspace*{\fill} 
-
-\workitemsone
-{Deep Feature Mining via Attention-based BiLSTM-GCN for Human Motor Imagery Recognition. \href{https://arxiv.org/abs/2005.00777}{[Paper]}\href{https://github.com/SuperBruceJia/EEG-DL}{[Code]}\\
-	Yimin Hou, \textbf{Shuyue Jia (Corresponding Author)}, Xiangmin Lun, Yan Shi, and Yang Li.\\
-	\emph{arXiv preprint arXiv:2005.00777}, 2021. (Under Review)}
-
-\hspace*{\fill}
-
-\workitemsone
-{Attention-based Graph ResNet for Motor Intent Detection from Raw EEG signals. \href{https://arxiv.org/abs/2007.13484}{[Paper]}\href{https://github.com/SuperBruceJia/EEG-DL}{[Code]}\\
-	\textbf{Shuyue Jia (Corresponding Author)}, Yimin Hou, Yan Shi, and Yang Li.\\
-	\emph{arXiv preprint arXiv:2007.13484}, 2021. (Rejected by MICCAI 2020)}
-
-\hspace*{\fill}
-
-\workitemsone
-{Improving Performance: a Collaborative Strategy for the Multi-data Fusion of Electronic Nose and Hyperspectral to Track the Quality Difference of Rice. \href{https://www.sciencedirect.com/science/article/abs/pii/S0925400521001143}{[Paper]} \\
-	Yan Shi, Hangcheng Yuan, Chenao Xiong, \textbf{Shuyue Jia}, Jingjing Liu, and Hong Men.\\
-	\emph{Sensors \& Actuators: B. Chemical}, 2021; 129546.}
-
-\hspace*{\fill}
-
-\workitemsone
-{Origin Traceability of Rice based on an Electronic Nose Coupled with a Feature Reduction Strategy. \href{https://iopscience.iop.org/article/10.1088/1361-6501/abb9e7/meta}{[Paper]} \\
-	Yan Shi, Xiaofei Jia, Hangcheng Yuan, \textbf{Shuyue Jia}, Jingjing Liu, and Hong Men.\\
-	\emph{Measurement Science and Technology}, 2020; 32(2):025107.}
-
-\hspace*{\fill}
 
 \section{Selected Projects}
 \noindent \textbf{EEG-DL: A Deep Learning library for EEG Tasks (Signals) Classification} \href{https://github.com/SuperBruceJia/EEG-DL}{[Code]} \hfill May 2020 
@@ -130,4 +99,4 @@
 \textbf{Libraries}: TensorFlow, PyTorch \\
 \textbf{Other frequently-used tools}: \LaTeX, Git, Docker, K8s \\
 \textbf{English Language}: CET-6 581, Fluent in English
-\end{document} ​
+\end{document}
