--- a/CV-Latex/ShuyueJia-CV.tex
+++ b/CV-Latex/ShuyueJia-CV.tex
@@ -10,7 +10,7 @@
 
 \longcontact
 {\href{mailto:shuyuej@ieee.org}{\nolinkurl{shuyuej@ieee.org}}}
-{(+852) 54604494}
+{(+852) 5460-4494}
 {\href{https://github.com/SuperBruceJia}{GitHub}}
 {\href{https://resume.github.io/?SuperBruceJia}{GitHub Résumé}}
 {\href{http://shuyuej.com/blog}{Blog}}
@@ -34,7 +34,7 @@
 {Summer School, Computer Science, GPA: 4.0/4.0}
 {Selected coursework: Computer Systems and Architecture (A+), University Writing and Communication (Pass)}
 
-\hspace*{\fill} 
+%\hspace*{\fill} 
 
 \section{Experience}
 \datedsubsection{Philips Research, Shanghai}{NLP Intern}{Jul - Oct 2020}
@@ -43,60 +43,60 @@
 {\href{https://github.com/SuperBruceJia/MedicalNER}{Medical NER}: compared the performances of different models $\rightarrow$ CRF++, Character-level BiLSTM + CRF, Character-level BiLSTM + Word-level BiLSTM / CNNs + CRF, and deployed the models using Flask and Docker as web apps. Codes are available \href{https://github.com/SuperBruceJia/pytorch-flask-deploy-webapp}{here}, and the Docker Images are available on \href{https://hub.docker.com/u/shuyuej}{Docker Hub}.}
 {\href{https://github.com/SuperBruceJia/dynamic-web-crawlering-python}{Dynamic Webs Crawling}: learned and crawled 620,000 words from NSTL using Python parallel package threading and other tricks to prevent Anti-reptile.}
 
-\hspace*{\fill} 
+%\hspace*{\fill} 
 
 \section{Research}
 \workitemsone
-{A Novel Approach of Decoding EEG Four-Class Motor Imagery Tasks via Scout ESI and CNN. \href{https://iopscience.iop.org/article/10.1088/1741-2552/ab4af6/meta}{[Paper]} \href{https://github.com/SuperBruceJia/EEG-Motor-Imagery-Classification-CNNs-TensorFlow}{[Code]}\\
-	Yimin Hou, Lu Zhou, \textbf{Shuyue Jia}, and Xiangmin Lun. \\
-	\emph{Journal of Neural Engineering}, 2020; 17(1):016048.}
-
-\hspace*{\fill} 
-
-\workitemsone
 {Deep Feature Mining via Attention-based BiLSTM-GCN for Human Motor Imagery Recognition. \href{https://arxiv.org/abs/2005.00777}{[Paper]}\href{https://github.com/SuperBruceJia/EEG-DL}{[Code]}\\
 	Yimin Hou, \textbf{Shuyue Jia}, Xiangmin Lun, Shu Zhang, Tao Chen, Fang Wang, Jinglei Lv. \\
-	\emph{arXiv preprint arXiv:2005.00777}, 2021. (Under Review)}
-	
-\hspace*{\fill}
+	\emph{Frontiers in Neuroscience}, 2021. (Accepted)
+}
+
+%\hspace*{\fill}
+
+\workitemsone
+{A Novel Approach of Decoding EEG Four-Class Motor Imagery Tasks via Scout ESI and CNN. \href{https://iopscience.iop.org/article/10.1088/1741-2552/ab4af6/meta}{[Paper]} \href{https://github.com/SuperBruceJia/EEG-Motor-Imagery-Classification-CNNs-TensorFlow}{[Code]}\\
+	Yimin Hou, Lu Zhou, \textbf{Shuyue Jia}, and Xiangmin Lun. \\
+	\emph{Journal of Neural Engineering}, 2020; 17(1):016048.
+}
+
+%\hspace*{\fill}
 
 \workitemsone
 {GCNs-Net: A Graph Convolutional Neural Network Approach for Decoding Time-resolved EEG Motor Imagery Signals. \href{https://arxiv.org/abs/2006.08924}{[Paper]} \href{https://shuyuej.com/files/GCNs-Net.pdf}{[Spectral-GCN-Presentation]} \href{https://shuyuej.com/files/Dynamic-GCN-Survey.pdf}{[Dynamic-GCN-Presentation]} \href{https://github.com/SuperBruceJia/EEG-DL}{[Code]}\\
 	Yimin Hou, \textbf{Shuyue Jia}, Xiangmin Lun, Shu Zhang, Tao Chen, Fang Wang, Jinglei Lv. \\
-	\emph{arXiv preprint arXiv:2006.08924}, 2021.}
+	\emph{arXiv preprint arXiv:2006.08924}, 2021.
+}
 
-\hspace*{\fill} 
+%\hspace*{\fill} 
 
 \section{Selected Projects}
-\noindent \textbf{EEG-DL: A Deep Learning library for EEG Tasks (Signals) Classification} \href{https://github.com/SuperBruceJia/EEG-DL}{[Code]} \hfill May 2020 
-\workitemsfour
-{EEG-DL is a Deep Learning (DL) library written by TensorFlow for EEG Tasks (Signals) Classification.}
-{Implemented 20+ popular algorithms including DNN, CNN, RNN-based, GCN with hands-on tutorials.}
-{Finished writing \emph{three papers} based on this project as shown in my \emph{Publications}.}
-{Comprehensive codes for EEG signals processing and classification \emph{research}, and got 100+ GitHub stars.}
-
-\hspace*{\fill} 
+%\noindent \textbf{EEG-DL: A Deep Learning library for EEG Tasks (Signals) Classification} \href{https://github.com/SuperBruceJia/EEG-DL}{[Code]} \hfill May 2020 
+%\workitemsfour
+%{EEG-DL is a Deep Learning (DL) library written by TensorFlow for EEG Tasks (Signals) Classification.}
+%{Implemented 20+ popular algorithms including DNN, CNN, RNN-based, GCN with hands-on tutorials.}
+%{Finished writing \emph{three papers} based on this project as shown in my \emph{Publications}.}
+%{Comprehensive codes for EEG signals processing and classification \emph{research}, and got 100+ GitHub stars.}
+%
+%\hspace*{\fill} 
 
 \noindent \textbf{Shipwreck Sonar Image Segmentation based on Entropy Method} \href{https://github.com/SuperBruceJia/Sonar-Image-Segmentation-through-Entropy-Method}{[Code]} \hfill Jun - Sep 2018 
 \workitemstwo
 {Pre-processed sonar images to enhance the contract between the hull and reverberation area, which consists of discrete cosine filtering (DCT)$\rightarrow$edge detection (Roberts Operator)$\rightarrow$threshold segmentation via a one-dimensional histogram to locate the ship$\rightarrow$morphological expansion by tapered concentric rings through Matlab.}
 {The proposed method improved segmentation accuracy (86\%+) compared with that without the pre-processed stage (no more than 80\%) on dozens of sonar images.}
 
-\hspace*{\fill} 
+%\hspace*{\fill} 
 
 \section{Awards}
-
-\noindent 2021 Standard Chartered Hong Kong Marathon, Half Marathon \textbf{\emph{placed 318 / 6000 (01:38:14)}} \hfill Oct 2021\\
-2019 Interdisciplinary Contest In Modeling \textbf{\emph{Honorable Mention}} \hfill Apr 2019\\
+\noindent 2019 Interdisciplinary Contest In Modeling \textbf{\emph{Honorable Mention}} \hfill Apr 2019\\
 2018 Mathematical Contest In Modeling (Jilin, China) \textbf{\emph{First Prize}} \hfill Aug 2018\\
-2017 Jilin City International Marathon, Half Marathon \textbf{\emph{placed 148 / 4000 (01:47:36)}} \hfill Jun 2017\\
 2015 National High School Math League (Shanxi, China) \textbf{\emph{Second Prize}} \hfill Sep 2015
 
-\hspace*{\fill}
+%\hspace*{\fill}
 
 \section{Professional Skills}
-\noindent \textbf{Languages}: Python, C++ \\
-\textbf{Libraries}: TensorFlow, PyTorch \\
+\noindent \textbf{Languages}: Python (TensorFlow, PyTorch), C++ \\
 \textbf{Other frequently-used tools}: \LaTeX, Git, Docker, K8s \\
 \textbf{English Language}: CET-6 581, Fluent in English
+
 \end{document}
