--- a/CV-Latex/ShuyueJia-CV.tex
+++ b/CV-Latex/ShuyueJia-CV.tex
@@ -20,9 +20,10 @@
 
 \section{Education}
 \datedsubsection{City University of Hong Kong, China}{}{May 2021 - Present}
-\workitemstwo
-{M.Phil., Computer Science Major}
-{Research area: Image Quality Assessment}
+\workitemsthree
+{M.Phil., Computer Science Major, GPA: 3.50/4.0}
+{Research area: Image Quality Assessment and Perceptual Optimization}
+{Selected coursework: Big Data Algorithms and Techniques (A), Machine Learning Algorithms and Applications (B)}
 
 \datedsubsection{Northeast Electric Power University, China}{}{Sep 2016 - Jun 2020}
 \workitemstwo
@@ -34,7 +35,7 @@
 {Summer School, Computer Science, GPA: 4.0/4.0}
 {Selected coursework: Computer Systems and Architecture (A+), University Writing and Communication (Pass)}
 
-%\hspace*{\fill} 
+%\hspace*{\fill}
 
 \section{Experience}
 \datedsubsection{Philips Research, Shanghai}{NLP Intern}{Jul - Oct 2020}
