--- a/CV-Latex/ShuyueJia-CV.tex
+++ b/CV-Latex/ShuyueJia-CV.tex
@@ -10,11 +10,11 @@
 
 \longcontact
 {\href{mailto:shuyuej@ieee.org}{\nolinkurl{shuyuej@ieee.org}}}
-{(+852) 5460-4494}
+{(+1) 213-296-5422}
 {\href{https://github.com/SuperBruceJia}{GitHub}}
 {\href{https://resume.github.io/?SuperBruceJia}{GitHub Résumé}}
 {\href{http://shuyuej.com/blog}{Blog}}
-{\href{https://shuyuej.com/}{Personal Profile}}
+{\href{https://shuyuej.com/}{Personal Webpage}}
 
 \hspace*{\fill} 
 
@@ -22,82 +22,149 @@
 \datedsubsection{City University of Hong Kong, China}{}{May 2021 - Present}
 \workitemsthree
 {M.Phil., Computer Science Major, GPA: 3.50/4.0}
-{Research area: Image Quality Assessment and Perceptual Optimization}
+{Supervisor: Dr. Shiqi Wang, Research area: Image Quality Assessment and Perceptual Optimization}
 {Selected coursework: Big Data Algorithms and Techniques (A), Machine Learning Algorithms and Applications (B)}
 
 \datedsubsection{Northeast Electric Power University, China}{}{Sep 2016 - Jun 2020}
 \workitemstwo
 {B.Eng., Intelligence Science and Technology Major, GPA: 80.26/100}
-{Supervisor: \href{mailto:ymh7821@163.com}{Prof. Yimin Hou}, Research area: EEG Signals Classification based on Deep Learning Methods}
+{Supervisor: Prof. Yimin Hou and Dr. Jinglei Lv, Research area: EEG Signals Processing based on DL Methods}
 
 \datedsubsection{University of California, Irvine, CA, USA}{}{Jul - Sep 2017}
 \workitemstwo
 {Summer School, Computer Science, GPA: 4.0/4.0}
 {Selected coursework: Computer Systems and Architecture (A+), University Writing and Communication (Pass)}
 
-%\hspace*{\fill}
-
-\section{Experience}
-\datedsubsection{Philips Research, Shanghai}{NLP Intern}{Jul - Oct 2020}
-\workitemsthree
-{\href{https://github.com/SuperBruceJia/Medical-Concept-Mapping}{Medical Concept Mapping}: three levels $\rightarrow$ BPE and FMM \& BMM Algorithms for Sub-words (Syntax-level), Word Vector Cosine Similarity (Semantics-level), and Knowledge Graph (Pragmatics-level).}
-{\href{https://github.com/SuperBruceJia/MedicalNER}{Medical NER}: compared the performances of different models $\rightarrow$ CRF++, Character-level BiLSTM + CRF, Character-level BiLSTM + Word-level BiLSTM / CNNs + CRF, and deployed the models using Flask and Docker as web apps. Codes are available \href{https://github.com/SuperBruceJia/pytorch-flask-deploy-webapp}{here}, and the Docker Images are available on \href{https://hub.docker.com/u/shuyuej}{Docker Hub}.}
-{\href{https://github.com/SuperBruceJia/dynamic-web-crawlering-python}{Dynamic Webs Crawling}: learned and crawled 620,000 words from NSTL using Python parallel package threading and other tricks to prevent Anti-reptile.}
-
-%\hspace*{\fill} 
+\hspace*{\fill}
 
 \section{Research}
+
 \workitemsone
-{Deep Feature Mining via Attention-based BiLSTM-GCN for Human Motor Imagery Recognition. \href{https://arxiv.org/abs/2005.00777}{[Paper]}\href{https://github.com/SuperBruceJia/EEG-DL}{[Code]}\\
-	Yimin Hou, \textbf{Shuyue Jia}, Xiangmin Lun, Shu Zhang, Tao Chen, Fang Wang, Jinglei Lv. \\
-	\emph{Frontiers in Neuroscience}, 2021. (Accepted)
+{Deep Feature Mining via Attention-based BiLSTM-GCN for Human Motor Imagery Recognition. \href{https://www.frontiersin.org/articles/10.3389/fbioe.2021.706229/abstract}{[Paper]}\href{https://github.com/SuperBruceJia/EEG-DL}{[Code]}\\
+	Yimin Hou, \textbf{Shuyue Jia (Corresponding Author)}, Xiangmin Lun, Shu Zhang, Jinglei Lv. \\
+	\emph{Frontiers in Bioengineering and Biotechnology}, 2021. (Accepted)
 }
 
-%\hspace*{\fill}
+\hspace*{\fill}
 
 \workitemsone
 {A Novel Approach of Decoding EEG Four-Class Motor Imagery Tasks via Scout ESI and CNN. \href{https://iopscience.iop.org/article/10.1088/1741-2552/ab4af6/meta}{[Paper]} \href{https://github.com/SuperBruceJia/EEG-Motor-Imagery-Classification-CNNs-TensorFlow}{[Code]}\\
 	Yimin Hou, Lu Zhou, \textbf{Shuyue Jia}, and Xiangmin Lun. \\
-	\emph{Journal of Neural Engineering}, 2020; 17(1):016048.
+	\emph{Journal of Neural Engineering}, 2020; 17(1):016048. (Published)
 }
 
-%\hspace*{\fill}
+\hspace*{\fill}
 
 \workitemsone
 {GCNs-Net: A Graph Convolutional Neural Network Approach for Decoding Time-resolved EEG Motor Imagery Signals. \href{https://arxiv.org/abs/2006.08924}{[Paper]} \href{https://shuyuej.com/files/GCNs-Net.pdf}{[Spectral-GCN-Presentation]} \href{https://shuyuej.com/files/Dynamic-GCN-Survey.pdf}{[Dynamic-GCN-Presentation]} \href{https://github.com/SuperBruceJia/EEG-DL}{[Code]}\\
-	Yimin Hou, \textbf{Shuyue Jia}, Xiangmin Lun, Shu Zhang, Tao Chen, Fang Wang, Jinglei Lv. \\
-	\emph{arXiv preprint arXiv:2006.08924}, 2021.
+	Yimin Hou, \textbf{Shuyue Jia (Corresponding Author)}, Xiangmin Lun, Shu Zhang, Jinglei Lv. \\
+	\emph{arXiv preprint arXiv:2006.08924}, 2022 (To be submitted).
 }
 
-%\hspace*{\fill} 
+\hspace*{\fill} 
+
+\workitemsone
+{Improving Performance: a Collaborative Strategy for the Multi-data Fusion of Electronic Nose and Hyperspectral to Track the Quality Difference of Rice. \href{https://www.sciencedirect.com/science/article/abs/pii/S0925400521001143}{[Paper]} \\
+	Yan Shi, Hangcheng Yuan, Chenao Xiong, \textbf{Shuyue Jia}, Jingjing Liu, and Hong Men.\\
+	\emph{Sensors \& Actuators: B. Chemical}, 2021; 129546. (Published)
+}
+	
+\hspace*{\fill}
+
+\workitemsone
+{Origin Traceability of Rice based on an Electronic Nose Coupled with a Feature Reduction Strategy. \href{https://iopscience.iop.org/article/10.1088/1361-6501/abb9e7/meta}{[Paper]} \\
+	Yan Shi, Xiaofei Jia, Hangcheng Yuan, \textbf{Shuyue Jia}, Jingjing Liu, and Hong Men.\\
+	\emph{Measurement Science and Technology}, 2020; 32(2):025107. (Published)
+}
+	
+\hspace*{\fill}
+
+\workitemsone
+{Attention-based Graph ResNet for Motor Intent Detection from Raw EEG signals. \href{https://arxiv.org/abs/2007.13484}{[Paper]}\href{https://github.com/SuperBruceJia/EEG-DL}{[Code]}\\
+	\textbf{Shuyue Jia (Corresponding Author)}, Yimin Hou, Yan Shi, and Yang Li.\\
+	\emph{arXiv preprint arXiv:2007.13484}, 2022. (Rejected by MICCAI 2020; To be submitted in 2022)
+}
+	
+\hspace*{\fill}
+
+\section{Experience}
+
+\datedsubsection{City University of Hong Kong, China}{Part-time Research Assistant}{Sep 2021 - April 2022}
+\workitemstwo
+{Investigated the topic of Deep Learning Models compression and lightweight, and the deployment on mobile devices.}
+{Funded by my mentor (Dr. Shiqi Wang) to cover tuition fees and living expenses in HK.}
+
+\hspace*{\fill} 
+
+\datedsubsection{Tencent Video, Beijing, China}{Recommender System Intern}{Oct - Dec 2020}
+\workitemstwo
+{Assisted with the unified architecture regarding the \emph{Rerank} Module for Tencent Video Recommendation System.}
+{Conducted research on the Dynamic Graph Convolutional Neural Networks (DGCN) \href{https://shuyuej.com/files/Dynamic-GCN-Survey.pdf}{Survey} and learned Reinforcement Learning models.}
+
+\hspace*{\fill} 
+
+\datedsubsection{Philips Research, Shanghai, China}{NLP Research Intern}{Jul - Oct 2020}
+\workitemsthree
+{\href{https://github.com/SuperBruceJia/Medical-Concept-Mapping}{Medical Concept Mapping}: three levels $\rightarrow$ BPE and FMM \& BMM Algorithms for Sub-words (Syntax-level), Word Vector Cosine Similarity (Semantics-level), and Knowledge Graph (Pragmatics-level).}
+{\href{https://github.com/SuperBruceJia/MedicalNER}{Medical NER}: compared the performances of different models $\rightarrow$ CRF++, Character-level BiLSTM + CRF, Character-level BiLSTM + Word-level BiLSTM / CNNs + CRF, and deployed the models using Flask and Docker as web apps. Codes are available \href{https://github.com/SuperBruceJia/pytorch-flask-deploy-webapp}{here} and the Docker Images are available on the \href{https://hub.docker.com/u/shuyuej}{Docker Hub}.}
+{\href{https://github.com/SuperBruceJia/dynamic-web-crawlering-python}{Dynamic Webs Crawling}: learned and crawled 620,000 words from NSTL using Python parallel package threading and other tricks to prevent Anti-reptile. (Mentor: Dr. Shuang Zhou)}
+
+\hspace*{\fill} 
+
+\datedsubsection{Tsinghua University, Beijing, China}{NLP Summer Intern}{Jun - Aug 2019}
+\workitemsthree
+{Natural Language Processing (NLP) Interned at State Key Laboratory of Intelligent Technology and Systems (Prof. Xiaoyan Zhu Team), Tsinghua University, China.}
+{I was in a team that was responsible for building a salesman training system, which was a piece of insurance dialogue systems. During intern, I led the effort to create a \href{https://github.com/SuperBruceJia/Chinese-Chat-Title-NER-BERT-BiLSTM-CRF}{Chinese Chat Title Named Entity Recognition (NER)} via the BERT-BiLSTM-CRF model, and then matched the formal name with the recognized title through rules. \\NER Dataset: 30,676 samples, 96.73\% accuracy on 550 samples.}
+{I also assisted in testing the sales training review system, and integrated salesman’s dialogue according to different difficulty levels, in verifying the reliability of the system.}
+
+\hspace*{\fill} 
 
 \section{Selected Projects}
-%\noindent \textbf{EEG-DL: A Deep Learning library for EEG Tasks (Signals) Classification} \href{https://github.com/SuperBruceJia/EEG-DL}{[Code]} \hfill May 2020 
-%\workitemsfour
-%{EEG-DL is a Deep Learning (DL) library written by TensorFlow for EEG Tasks (Signals) Classification.}
-%{Implemented 20+ popular algorithms including DNN, CNN, RNN-based, GCN with hands-on tutorials.}
-%{Finished writing \emph{three papers} based on this project as shown in my \emph{Publications}.}
-%{Comprehensive codes for EEG signals processing and classification \emph{research}, and got 100+ GitHub stars.}
-%
-%\hspace*{\fill} 
+
+\noindent \textbf{EEG-DL: A Deep Learning library for EEG Tasks (Signals) Classification} \href{https://github.com/SuperBruceJia/EEG-DL}{[Code]} \hfill May 2020 
+\workitemsfour
+{EEG-DL is a Deep Learning (DL) library written by TensorFlow for EEG Tasks (Signals) Classification.}
+{Implemented 20+ popular algorithms including DNN, CNN, RNN-based, GCN with hands-on tutorials.}
+{Finished writing \emph{three papers} based on this project as shown in my \emph{Publications}.}
+{Comprehensive codes for EEG signals processing and classification \emph{research}, and got 300+ GitHub stars.}
+
+\hspace*{\fill} 
 
 \noindent \textbf{Shipwreck Sonar Image Segmentation based on Entropy Method} \href{https://github.com/SuperBruceJia/Sonar-Image-Segmentation-through-Entropy-Method}{[Code]} \hfill Jun - Sep 2018 
 \workitemstwo
 {Pre-processed sonar images to enhance the contract between the hull and reverberation area, which consists of discrete cosine filtering (DCT)$\rightarrow$edge detection (Roberts Operator)$\rightarrow$threshold segmentation via a one-dimensional histogram to locate the ship$\rightarrow$morphological expansion by tapered concentric rings through Matlab.}
 {The proposed method improved segmentation accuracy (86\%+) compared with that without the pre-processed stage (no more than 80\%) on dozens of sonar images.}
 
+\hspace*{\fill} 
+%
+%\noindent \textbf{Third China Data Mining Competition, Butterfly Recognition} \href{https://ccdm2018.sdufe.edu.cn/info/1012/1212.htm}{[Website]}  \href{https://github.com/SuperBruceJia/YOLO-V2-Object-Detection-Implementation}{[Code]} \hfill Oct 2017 - May 2018 
+%\workitemsthree
+%{Successfully implemented YOLO-V2 and Faster-RCNN object detection algorithms under Windows \& Ubuntu OS using the official butterfly dataset.}
+%{Used affine transformation, noise addition, contrast enhancement, rotation, symmetry changing, and other methods to extend the dataset.}
+%{YOLO-V2 Results (Team A106): 71.42\% Averaged IoU, and unsatisfactory classification accuracy.}
+
 %\hspace*{\fill} 
 
 \section{Awards}
-\noindent 2019 Interdisciplinary Contest In Modeling \textbf{\emph{Honorable Mention}} \hfill Apr 2019\\
-2018 Mathematical Contest In Modeling (Jilin, China) \textbf{\emph{First Prize}} \hfill Aug 2018\\
-2015 National High School Math League (Shanxi, China) \textbf{\emph{Second Prize}} \hfill Sep 2015
 
-%\hspace*{\fill}
+\noindent 2021 Standard Chartered Hong Kong Marathon, Half Marathon, Placed \emph{318 / 6000} \hfill Oct 2021\\
+2019 Interdisciplinary Contest In Modeling (United States) \textbf{\emph{Honorable Mention}} \hfill Apr 2019\\
+2018 Mathematical Contest In Modeling (Jilin, China) \textbf{\emph{First Prize}} \hfill Aug 2018\\
+2018 Interdisciplinary Contest In Modeling (United States) \textbf{\emph{Successful Participant}} \hfill Apr 2018\\
+2018 NEEPU Outstanding Student Leader \hfill Oct 2018\\
+Innovation Scholarship of NEEPU \textbf{\emph{Winner}} \hfill 2018/2019\\
+Academic Excellence Scholarship of NEEPU \textbf{\emph{Third Prize}} \hfill 2017/2018/2019/2020 \\
+Jilin City International Marathon, Half Marathon, Placed \emph{148 / 5000} \hfill Jun 2017\\
+2015 National High School Math League \textbf{\emph{Second Prize}} \hfill Sep 2015\\
+The 32$^{nd}$ Chinese Physics Olympiad \textbf{\emph{Third Prize}} \hfill Oct 2015
+
+\hspace*{\fill}
 
 \section{Professional Skills}
-\noindent \textbf{Languages}: Python (TensorFlow, PyTorch), C++ \\
-\textbf{Other frequently-used tools}: \LaTeX, Git, Docker, K8s \\
-\textbf{English Language}: CET-6 581, Fluent in English
+
+\noindent \textbf{Languages}: Proficient in Python and Matlab; Familiar with C++/C/Embedded C, R, and JavaScript \\
+\textbf{Libraries}: TensorFlow (Preferred), PyTorch \\
+\textbf{Other frequently-used tools}: Git, Vim, Markdown, Shell, \LaTeX, Docker, K8s \\
+\textbf{English Language}: Fluent in English, CET-6 581, CET-4 577, Duolingo 110
 
 \end{document}
